--- a/scilab/modules/call_scilab/Makefile.am
+++ b/scilab/modules/call_scilab/Makefile.am
@@ -59,6 +59,7 @@ libscicall_scilab_la_sci_gateway_DATA = sci_gateway/call_scilab_gateway.xml
 #### call_scilab : include files ####
 libscicall_scilab_la_includedir=$(pkgincludedir)/call_scilab
 libscicall_scilab_la_include_HEADERS = includes/CallScilab.h \
-	includes/fromjava.h
+	includes/fromjava.h \
+	includes/dynlib_call_scilab.h
 
 include $(top_srcdir)/Makefile.incl.am
